--- a/data/cy.yaml
+++ b/data/cy.yaml
@@ -12,7 +12,7 @@ about:
 
   about_me: |
     
-    I’m currently a Ph.D. candidate in Management Science at the Sauder School of Business, University of British Columbia. My research focuses on decision making under uncertainty, with applications spanning partially observable Markov decision processes, inventory control, and healthcare operations. I obtained my M.S. and B.S. in Industrial Engineering and Operations Research from UC Berkeley.
+    I’m currently a Ph.D. candidate in Management Science at the Sauder School of Business, University of British Columbia. My research focuses on decision making under uncertainty, with applications spanning partially observable Markov decision processes, inventory control, and healthcare operations. I obtained my M.S. and B.S. in Industrial Engineering and Operations Research from the University of California, Berkeley.
     
     This site is under development — stay tuned for updates.
     
