--- a/data/cy.yaml
+++ b/data/cy.yaml
@@ -98,7 +98,8 @@ publications:
 
 
 fact:
-  - aaaa
+  - title: ''aaaa''
+    desc: "bbbb"
 awards:
 
   - title: "The University of British Columbia Affiliated Fellowships Doctoral Program"
