--- a/data/cy.yaml
+++ b/data/cy.yaml
@@ -98,8 +98,8 @@ publications:
 
 
 fact:
-  - title: ''aaaa''
-    desc: "bbbb"
+  _Optimal Control of a Partially Observable Markov Deterioration Process_
+    - INFORMS 2024 Annual Meeting, Seattle, WA, United States
 
     
 awards:
