--- a/data/cy.yaml
+++ b/data/cy.yaml
@@ -97,9 +97,9 @@ publications:
       link: ""
 
 
-fact:
-  _Optimal Control of a Partially Observable Markov Deterioration Process_
-    - INFORMS 2024 Annual Meeting, Seattle, WA, United States
+# fact:
+#   _Optimal Control of a Partially Observable Markov Deterioration Process_
+#     - INFORMS 2024 Annual Meeting, Seattle, WA, United States
 
     
 awards:
