--- a/data/cy.yaml
+++ b/data/cy.yaml
@@ -165,7 +165,9 @@ experience:
       Teaching Assistant, Winter 2022
 
 
-
+# fact:
+#   _Optimal Control of a Partially Observable Markov Deterioration Process_
+#     - INFORMS 2024 Annual Meeting, Seattle, WA, United States
 
 
 talks: |
