--- a/data/cy.yaml
+++ b/data/cy.yaml
@@ -53,7 +53,7 @@ publications:
     - author: "__Cong Yang__ and Hao Zhang"
       title: "Optimal Control of a Partially Observable Markov Deterioration Process"
       journal: "Management Science"
-      status: "Major Revision in"
+      status: "Minor Revision in"
       number: 1
       link: "https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4843143"
 
