--- a/data/cy.yaml
+++ b/data/cy.yaml
@@ -91,7 +91,7 @@ publications:
     - author: "__Cong Yang__, Woonghee Tim Huh, Steven Shechter, James Lan"
       title: "The Impact of Organ Blood Type Conversion on Kidney Paired Donation: A Simulation and Optimization Study"
       journal: "American Journal of Transplantation"
-      status: "Submitted to"
+      status: "Major Revision in"
       impact_factor: 8.2
       number: 6
       link: ""
