--- a/data/cy.yaml
+++ b/data/cy.yaml
@@ -74,7 +74,7 @@ publications:
 
     - author: "Harry Zhang, __Cong Yang__, Woonghee Tim Huh, Sergii Kravchenko"
       title: "Optimal Control for Multi-Product Additive Manufacturing Systems"
-      status: "Manuscript in preparation"
+      status: "Working Paper"
       number: 4
       link: ""
 
