--- a/data/cy.yaml
+++ b/data/cy.yaml
@@ -172,6 +172,7 @@ experience:
 
 talks: |
   _Optimal Control of a Partially Observable Markov Deterioration Process_
+    - INFORMS 2025 Annual Meeting, Atlanta, GA, United States
     - INFORMS 2024 Annual Meeting, Seattle, WA, United States
   
   _A Nonparametric Learning Algorithm for a Stochastic Multi-echelon Inventory Problem_
